# cascade-solver

./: .gitignore  Cargo.toml  LICENSE  README.md  STATUS.md  build.rs  cadical_ffi.cpp  cadical_ffi.h
benchmarks/: BENCHMARK.md  fair_bench_2025.txt
data/: empirical_walls.csv
docs/: ARCHITECTURE.md  TUTORIAL.md  ramsey_ns_invariance.md
docs/rfc/: 0001-online-symmetry-propagator.md
scripts/: reproduce.sh
src/: augmentation.rs  bcp.rs  biclique.rs  cadical.rs  card_proof.rs  cardinality.rs  certify.rs  chain.rs  conquer.rs  constraint.rs  cuber.rs  dimacs.rs  lib.rs  main.rs  problems.rs  proof.rs  tuple_schema.rs  types.rs
src/algebra/: alg_experiments.rs  clifford_ns.rs  graph_canon.rs  mod.rs  ns.rs  ns_cert.rs  ns_fp.rs  ns_to_pb.rs  orbit_ns.rs  php_cert_explicit.rs  php_orbit.rs  php_orbit_enum.rs  php_pair_orbits.rs  poly.rs  propagator.rs  quotient_wiedemann.rs  tseitin.rs
src/backend/: cadical.rs  mod.rs
src/propagator/: biclique.rs  composite.rs  mod.rs
src/symmetry/: generators.rs  lex.rs  mod.rs  online.rs  proof.rs  satsuma.rs  schreier_sims.rs
tests/: algebra_ramsey.rs  composite_parity.rs  online_sym_integration.rs  overlay_convention.rs  php_complementarity.rs  satsuma_generators.rs  schreier_sims_integration.rs
